--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   provider: ^6.1.2
   url_launcher: ^6.2.5
   google_fonts: ^6.1.0
+  flutter_sound: ^9.3.8
+  audio_session: ^0.1.18
+  intl: ^0.19.0
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
