--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  macos_ui: ^2.0.5
-  provider: ^6.1.2
-  url_launcher: ^6.2.5
+  cupertino_icons:
+  macos_ui:
+  provider:
+  url_launcher:
   google_fonts: ^6.1.0
-  flutter_sound: ^9.3.8
-  audio_session: ^0.1.18
-  intl: ^0.19.0
-  permission_handler: ^11.3.0
+  record:
+  audioplayers:
+  path:
+  path_provider: ^2.1.2
+  flutter_sound: ^9.2.13
 
 dev_dependencies:
   flutter_test:
