--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.8
+  sqflite:
+  record:
+  audioplayers:
+  path: ^1.9.0
+  path_provider: ^2.1.2
   web_startup_analyzer:
     path: web_startup_analyzer
 
