--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   audioplayers:
   path: ^1.9.0
   path_provider: ^2.1.2
+  archive:
   web_startup_analyzer:
     path: web_startup_analyzer
 
