--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.2
   archive:
+  http:
   web_startup_analyzer:
     path: web_startup_analyzer
 
