--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Update dependencies
         run: sudo apt-get update
       - name: Install dependencies
-        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5
+        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5 libgstreamer1.0-dev gstreamer1.0-tools gstreamer1.0-plugins-base
       - name: Install project dependencies
         run: flutter pub get
       - name: Enable linux build
