--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
   url_launcher: ^6.1.8
   sqflite:
@@ -34,6 +33,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  xml: ^6.5.0
 
 flutter:
   uses-material-design: true
