--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -2,150 +2,152 @@ name: Flutter CI
 
 on:
   push:
+    branches:
+      - main
     tags:
       - "*"
 
 jobs:
-#  build-and-release-linux:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: subosito/flutter-action@v2
-#        with:
-#          channel: 'stable'
-#          architecture: x64
-#      - name: Update dependencies
-#        run: sudo apt-get update && sudo add-apt-repository universe
-#      - name: Install dependencies
-#        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5 libunwind-dev libgstreamer1.0-dev gstreamer1.0-tools gstreamer1.0-plugins-base
-#      - name: Install project dependencies
-#        run: flutter pub get
-#      - name: Enable linux build
-#        run: flutter config --enable-linux-desktop
-#      - name: Build artifacts
-#        run: flutter build linux --release
-#      - name: Build Appimage
-#        run: bash ./github_appimage_build.sh
-#      - name: Compress action step
-#        run:  tar  -C build/linux/x64/release/bundle -cf lang-fe-linux.tar.gz ./
-#      - name: Linux Release
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: lang-fe-linux
-#          path: lang-fe-linux.tar.gz
-#      - name: Linux Appimage Release
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: lang-fe-appimage
-#          path: Flut_Renamer-x86_64.AppImage
-#      - uses: actions/setup-java@v2
-#        with:
-#          distribution: 'zulu'
-#          java-version: '17.x'
-#      - name: decode key base64
-#        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/lang-fe.jks
-#        env:
-#          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-#      - name: Build android
-#        run: |
-#          flutter build apk --release
-#          flutter build apk --release --split-per-abi
-#        env:
-#          KEYSTORE: lang-fe.jks
-#          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-#          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-#          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
-#      - name: Android Release
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: lang-fe-android
-#          path: build/app/outputs/flutter-apk
-
-#  build-and-release-windows:
-#    runs-on: windows-latest
-#
-#    steps:
-#      - name: check current path
-#        run: cd
-#      - uses: actions/checkout@v4
-#      - uses: subosito/flutter-action@v2
-#        with:
-#          channel: 'stable'
-#          architecture: x64
-#      - name: Install project dependencies
-#        run: flutter pub get
-#      - name: Enable windows build
-#        run: flutter config --enable-windows-desktop
-#      - name: Build artifacts
-#        run: flutter build windows --release
-#      - name: Setup Node
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: 20
-#      - name: install evb
-#        run: npm install enigmavirtualbox -g
-#      - name: list files
-#        run: dir /A
-#      - name: path
-#        run: cd FE
-#      - name: list files
-#        run: dir /A
-#      - name: create evb file
-#        run: dart FE\dev\windows_evb_config_generator.dart
-#      - name: build single exe file
-#        run: enigmavirtualbox cli "lang-fe.evb"
-#      - name: Windows Release
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: lang-fe-win
-#          path: lang-fe.exe
-
-  build-and-release-macos:
-    runs-on: macos-14
+  build-and-release-linux:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: arm64
+          architecture: x64
+      - name: Update dependencies
+        run: sudo apt-get update && sudo add-apt-repository universe
+      - name: Install dependencies
+        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5 libunwind-dev libgstreamer1.0-dev gstreamer1.0-tools gstreamer1.0-plugins-base
       - name: Install project dependencies
         run: flutter pub get
-      - name: Enable macOS build
-        run: flutter config --enable-macos-desktop
+      - name: Enable linux build
+        run: flutter config --enable-linux-desktop
       - name: Build artifacts
-        run: flutter build macos --release
-      - name: install npm
-        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      - name: install appdmg
-        run: npm install -g appdmg
-      - name: build dmg
-        run: appdmg ./dmg/config.json ./build/macos/Build/Products/Release/lang-fe.dmg
-      - name: macOS Release
+        run: flutter build linux --release
+      - name: Build Appimage
+        run: bash ./github_appimage_build.sh
+      - name: Compress action step
+        run:  tar  -C build/linux/x64/release/bundle -cf lang-fe-linux.tar.gz ./
+      - name: Linux Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-macos
-          path: build/macos/Build/Products/Release/lang-fe.dmg
-      - name: Build ios
+          name: lang-fe-linux
+          path: lang-fe-linux.tar.gz
+      - name: Linux Appimage Release
+        uses: actions/upload-artifact@v4
+        with:
+          name: lang-fe-appimage
+          path: Flut_Renamer-x86_64.AppImage
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '17.x'
+      - name: decode key base64
+        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/lang-fe.jks
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      - name: Build android
         run: |
-          flutter build ios --release --no-codesign
-          ln -sf ./build/ios/iphoneos Payload
-          zip -r9 lang-fe-release.ipa Payload/runner.app
-      - name: ios Release
+          flutter build apk --release
+          flutter build apk --release --split-per-abi
+        env:
+          KEYSTORE: lang-fe.jks
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
+      - name: Android Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-ios
-          path: lang-fe-release.ipa
+          name: lang-fe-android
+          path: build/app/outputs/flutter-apk
+
+  build-and-release-windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: check current path
+        run: cd
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Enable windows build
+        run: flutter config --enable-windows-desktop
+      - name: Build artifacts
+        run: flutter build windows --release
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: install evb
+        run: npm install enigmavirtualbox -g
+      - name: list files
+        run: dir /A
+      - name: path
+        run: cd FE
+      - name: list files
+        run: dir /A
+      - name: create evb file
+        run: dart FE\dev\windows_evb_config_generator.dart
+      - name: build single exe file
+        run: enigmavirtualbox cli "lang-fe.evb"
+      - name: Windows Release
+        uses: actions/upload-artifact@v4
+        with:
+          name: lang-fe-win
+          path: lang-fe.exe
+
+#  build-and-release-macos:
+#    runs-on: macos-14
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: subosito/flutter-action@v2
+#        with:
+#          channel: 'stable'
+#          architecture: arm64
+#      - name: Install project dependencies
+#        run: flutter pub get
+#      - name: Enable macOS build
+#        run: flutter config --enable-macos-desktop
+#      - name: Build artifacts
+#        run: flutter build macos --release
+#      - name: install npm
+#        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+#      - name: install appdmg
+#        run: npm install -g appdmg
+#      - name: build dmg
+#        run: appdmg ./dmg/config.json ./build/macos/Build/Products/Release/lang-fe.dmg
+#      - name: macOS Release
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: lang-fe-macos
+#          path: build/macos/Build/Products/Release/lang-fe.dmg
+#      - name: Build ios
+#        run: |
+#          flutter build ios --release --no-codesign
+#          ln -sf ./build/ios/iphoneos Payload
+#          zip -r9 lang-fe-release.ipa Payload/runner.app
+#      - name: ios Release
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: lang-fe-ios
+#          path: lang-fe-release.ipa
 
 
   upload:
     runs-on: ubuntu-latest
     permissions: write-all
     needs:
-#      - build-and-release-linux
-#      - build-and-release-windows
-      - build-and-release-macos
+      - build-and-release-linux
+      - build-and-release-windows
+#      - build-and-release-macos
     steps:
       - uses: actions/download-artifact@v4
         with:
