--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5
       - name: Install gstreamer
-        run: apt-get install libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa gstreamer1.0-gl gstreamer1.0-gtk3 gstreamer1.0-qt5 gstreamer1.0-pulseaudio
+        run: sudo apt-get install libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa gstreamer1.0-gl gstreamer1.0-gtk3 gstreamer1.0-qt5 gstreamer1.0-pulseaudio
       - name: Install project dependencies
         run: flutter pub get
       - name: Enable linux build
@@ -77,28 +77,28 @@ jobs:
         with:
           channel: 'stable'
           architecture: x64
-#      - name: Install project dependencies
-#        run: flutter pub get
-#      - name: Enable windows build
-#        run: flutter config --enable-windows-desktop
-#      - name: Build artifacts
-#        run: flutter build windows --release
-#      - name: Setup Node
-#        uses: actions/setup-node@v4
-#        with:
-#          node-version: 20
-#      - name: install evb
-#        run: npm install enigmavirtualbox -g
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Enable windows build
+        run: flutter config --enable-windows-desktop
+      - name: Build artifacts
+        run: flutter build windows --release
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: install dev
+        run: npm install enigmavirtualbox -g
       - name: list files
         run: dir
       - name: path
         run: dir /A
       - name: list files
         run: dir /A
-      - name: create evb file
+      - name: create dev file
         run: dart FE\dev\windows_evb_config_generator.dart
       - name: build single exe file
-        run: enigmavirtualbox cli "lang-fe.evb"
+        run: enigmavirtualbox cli "lang-fe.dev"
       - name: Windows Release
         uses: actions/upload-artifact@v4
         with:
