--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -21,6 +21,8 @@ jobs:
         run: sudo apt-get update && sudo add-apt-repository universe
       - name: Install dependencies
         run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5
+      - name: uninstall old gstreamer
+        run: sudo apt autoremove
       - name: Install gstreamer
         run: sudo apt-get install libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa gstreamer1.0-gl gstreamer1.0-gtk3 gstreamer1.0-qt5 gstreamer1.0-pulseaudio
       - name: Install project dependencies
@@ -96,7 +98,7 @@ jobs:
       - name: list files
         run: dir /A
       - name: create dev file
-        run: dart FE\dev\windows_evb_config_generator.dart
+        run: dart dev\windows_evb_config_generator.dart
       - name: build single exe file
         run: enigmavirtualbox cli "lang-fe.dev"
       - name: Windows Release
