--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   web_startup_analyzer:
     path: web_startup_analyzer
   firebase_core: ^2.27.2
+  firebase_auth: ^4.18.0
 
 dev_dependencies:
   analysis_defaults:
