Fixing new stuff (#14)
* Adding firebase

* Cleaning up clutter and simplifying UI

* Fixing pipeline for the last time

--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -2,14 +2,12 @@ name: Flutter CI
 
 on:
   push:
-    branches:
-      - main
     tags:
       - "*"
 
 jobs:
   build-and-release-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v4
@@ -32,7 +30,7 @@ jobs:
       - name: Build artifacts
         run: flutter build linux --release
       - name: Build Appimage
-        run: bash ./github_appimage_build.sh
+        run: bash ./dev/github_linux_appimage_build.sh
       - name: Compress action step
         run:  tar  -C build/linux/x64/release/bundle -cf lang-fe-linux.tar.gz ./
       - name: Linux Release
@@ -40,6 +38,24 @@ jobs:
         with:
           name: lang-fe-linux
           path: lang-fe-linux.tar.gz
+#      - name: decode key base64
+#        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/lang-fe.jks
+#        env:
+#          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      - name: Build android
+        run: |
+          flutter build apk --release
+          flutter build apk --release --split-per-abi
+#        env:
+#          KEYSTORE: lang-fe.jks
+#          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+#          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+#          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
+      - name: Android Release
+        uses: actions/upload-artifact@v4
+        with:
+          name: lang-fe-android
+          path: build/app/outputs/flutter-apk
 
 
   build-and-release-windows:
@@ -114,28 +130,10 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '17.x'
-      - name: decode key base64
-        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/lang-fe.jks
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-      - name: Build android
-        run: |
-          flutter build apk --release
-          flutter build apk --release --split-per-abi
-        env:
-          KEYSTORE: lang-fe.jks
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
-      - name: Android Release
-        uses: actions/upload-artifact@v4
-        with:
-          name: lang-fe-android
-          path: build/app/outputs/flutter-apk
 
 
   upload:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions: write-all
     needs:
       - build-and-release-linux
