--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
     path: web_startup_analyzer
   firebase_core: ^2.27.2
   firebase_auth: ^4.18.0
+  flutter_facebook_auth: ^6.1.1
+  google_sign_in: ^6.2.1
+  firebase_messaging: ^14.7.21
+  barcode_widget: ^2.0.4
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   analysis_defaults:
