--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   firebase_messaging: ^14.7.21
   barcode_widget: ^2.0.4
   flutter_signin_button: ^2.0.0
-
+  connectivity_plus: ^3.0.6
+  provider: ^6.1.2
+  
 dev_dependencies:
   analysis_defaults:
     path: analysis_defaults
