--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   barcode_widget: ^2.0.4
   flutter_signin_button: ^2.0.0
   provider: ^6.1.2
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   analysis_defaults:
@@ -45,3 +46,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
