--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description:
   A Flutter project showcasing supported Material 3 components, typography, color system and elevation.
   Supports different light/dark mode, color seed, and comparison to Material 2.
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -35,7 +35,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   connectivity_plus: ^3.0.6
   provider: ^6.1.2
-  
+  package_info_plus: ^7.0.0
+
 dev_dependencies:
   analysis_defaults:
     path: analysis_defaults
