--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: lang_fe
-description:
-  Language Learning App
+description: Language Learning App
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -34,6 +33,8 @@ dependencies:
   flutter_signin_button: ^2.0.0
   provider: ^6.1.2
   flutter_svg: ^2.0.10+1
+  connectivity_plus: ^3.0.6
+  package_info_plus: ^7.0.0
 
 dev_dependencies:
   analysis_defaults:
