--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   connectivity_plus: ^3.0.6
   package_info_plus: ^7.0.0
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   analysis_defaults:
