--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   provider: ^6.1.2
   flutter_svg: ^2.0.10+1
+  sqflite_common_ffi_web: '>=0.1.0-dev.1'
 
 dev_dependencies:
   analysis_defaults:
