--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   connectivity_plus: ^3.0.6
   package_info_plus: ^7.0.0
   device_info_plus: ^10.1.0
+  sqflite_common_ffi_web: '>=0.1.0-dev.1'
 
 dev_dependencies:
   analysis_defaults:
