--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -42,6 +42,10 @@ jobs:
 #        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/lang-fe.jks
 #        env:
 #          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '17.x'
       - name: Build android
         run: |
           flutter build apk --release
