Working website and shit

--- a/.github/workflows/01_build_release.yaml
+++ b/.github/workflows/01_build_release.yaml
@@ -32,14 +32,14 @@ jobs:
       - name: Build Appimage
         run: bash ./dev/github_linux_appimage_build.sh
       - name: Compress action step
-        run:  tar  -C build/linux/x64/release/bundle -cf lang-fe-linux.tar.gz ./
+        run:  tar  -C build/linux/x64/release/bundle -cf speaksharp-linux.tar.gz ./
       - name: Linux Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-linux
-          path: lang-fe-linux.tar.gz
+          name: speaksharp-linux
+          path: speaksharp-linux.tar.gz
 #      - name: decode key base64
-#        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/lang-fe.jks
+#        run: echo $KEYSTORE_BASE64 | base64 -di > ./android/app/speaksharp.jks
 #        env:
 #          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       - uses: actions/setup-java@v2
@@ -51,14 +51,14 @@ jobs:
           flutter build apk --release
           flutter build apk --release --split-per-abi
 #        env:
-#          KEYSTORE: lang-fe.jks
+#          KEYSTORE: speaksharp.jks
 #          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
 #          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
 #          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD}}
       - name: Android Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-android
+          name: speaksharp-android
           path: build/app/outputs/flutter-apk
 
 
@@ -87,12 +87,12 @@ jobs:
       - name: create dev file
         run: dart dev\windows_evb_config_generator.dart
       - name: build single exe file
-        run: enigmavirtualbox cli "lang-fe.evb"
+        run: enigmavirtualbox cli "speaksharp.evb"
       - name: Windows Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-win
-          path: lang_fe.exe
+          name: speaksharp-win
+          path: speaksharp.exe
 
   build-and-release-macos:
     runs-on: macos-14
@@ -114,22 +114,22 @@ jobs:
       - name: install appdmg
         run: npm install -g appdmg
       - name: build dmg
-        run: appdmg ./dmg/config.json ./build/macos/Build/Products/Release/lang-fe.dmg
+        run: appdmg ./dmg/config.json ./build/macos/Build/Products/Release/speaksharp.dmg
       - name: macOS Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-macos
-          path: build/macos/Build/Products/Release/lang-fe.dmg
+          name: speaksharp-macos
+          path: build/macos/Build/Products/Release/speaksharp.dmg
       - name: Build ios
         run: |
           flutter build ios --release --no-codesign
           ln -sf ./build/ios/iphoneos Payload
-          zip -r9 lang-fe-release.ipa Payload/runner.app
+          zip -r9 speaksharp-release.ipa Payload/runner.app
       - name: ios Release
         uses: actions/upload-artifact@v4
         with:
-          name: lang-fe-ios
-          path: lang-fe-release.ipa
+          name: speaksharp-ios
+          path: speaksharp-release.ipa
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
@@ -146,7 +146,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          path: ./lang-fe-release
+          path: ./speaksharp-release
           merge-multiple: true
       - name: Install dependenciesw
         run: sudo apt-get install tree -y
@@ -158,4 +158,4 @@ jobs:
           omitNameDuringUpdate: true
           omitPrereleaseDuringUpdate: true
           allowUpdates: true
-          artifacts: lang-fe-release/*
+          artifacts: speaksharp-release/*
